# purple_martians

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  icon.rc  lev3  lev8  lev8A  lev8AA  liballegro_monolith.so.5.2.9  license.txt  lin_build_all  lin_compile  lin_install_libs  lin_link  lin_make_release  log_scrape.php  log_scrape_session.php  lv2  lv4  lv4A  lv4AA  lv4AAA  lv4_restore_testv2  mw_ntm  new_log_scrape.php  op  pm  pm.bmarks  pm.cbp  pm.cfg  pm.cscope_file_list  pm.layout  pmhelp.txt  pml  readme_linux  scrape  scrape_status  session_scrape.php  win_copy_to_pmh.bat  (+1 more)
bitmaps/: level_data.pm  mW.pm  pde.pm  sprit001.pm  tiles.xcf
data/: database.db  logs.db  mW.pm  sessions.db  settings.pm
docs/: 20251228-todo.txt  20251228_notes.txt  A5 debugging.txt  Tiles.txt  a_changes.txt  a_to do.txt  about.html  bio for allegro.cc.txt  blank.html  block_flags.html  bs_new.bsdesign  bs_notes.txt  bullets.html  collisions.txt  colorize_tiles.txt  command line args and function keys.txt  copy_link_translation_table.txt  description of game for allegro.cc.txt  display.html  download.html  editing tiles with gimp.txt  events.html  footer.html  game_moves_array.html  history.html  history.txt  how to use PDE.txt  index.html  index2.html  input.html  items.html  level_array.html  level_done.html  lhs_nav.html  lifts.txt  log file viewer.txt  logo.html  mdw_compiling allegro.txt  more.html  multiplayer.html  (+47 more)
help/: pmhelp.txt
levels/: level001.pml  level002.pml  level003.pml  level004.pml  level005.pml  level006.pml  level007.pml  level008.pml  level009.pml  level010.pml  level011.pml  level012.pml  level013.pml  level014.pml  level015.pml  level016.pml  level017.pml  level018.pml  level019.pml  level020.pml  level021.pml  level022.pml  level023.pml  level024.pml  level025.pml  level026.pml  level027.pml  level028.pml  level029.pml  level030.pml  level031.pml  level032.pml  level033.pml  level034.pml  level035.pml  level036.pml  level037.pml  level038.pml  level039.pml  level040.pml  (+161 more)
libnet/: changes.txt  makefile  places.txt  port.mak  readme.txt  tochange.txt
libnet_win/: compiling.txt  places.txt
linux_libs/: liballegro_monolith.so.5.2  libdumb.so.1
pm_docs/: 20251228-todo.txt  20251228_notes.txt  A5 debugging.txt  Server Client File Transfer.txt  a_changes.txt  collisions.txt  colorize_tiles.txt  command line args and function keys.txt  copy_link_translation_table.txt  cutscene_transitions.txt  demo_mode.txt  drawing rotated bitmaps.txt  editing tiles with gimp.txt  history.txt  how to use PDE.txt  level_editor_process.txt  lifts.txt  log file viewer.txt  logging.txt  netem.txt  netgame_stdf_rewind_s1_s2.txt  netplay.txt  new5.txt  new5_todo.txt  new8.txt  randomizing groups of enemies and items.txt  rectangle_formats.txt  reviews.txt  trigger event system.txt  warp.txt  web pages.txt
qt/: CMakeLists.txt  customgraphicsview.cpp  customgraphicsview.h  form.cpp  form.h  form.ui  mChart.h  mChartView.h  mChartViewCrosshairs.cpp  mChartViewCrosshairs.h  mChartViewCursor.cpp  mChartViewCursor.h  mChartsWidget.cpp  mChartsWidget.h  mChartsWidgetControlWidget.cpp  mChartsWidgetControlWidget.h  mCurrentSessionTimelineGraphicsView.h  mCurrentSessionTimelineWidget.cpp  mCurrentSessionTimelineWidget.h  mGraphicsScene.h  mGraphicsViewSessionTimeline.h  mGraphicsViewZoom.cpp  mGraphicsViewZoom.h  mLogView.cpp  mLogView.h  mMainWindow.cpp  mMainWindow.h  mSessionsGraphicsItem.h  mSessionsTimelineWidget.cpp  mSessionsTimelineWidget.h  mSessionsWidget.cpp  mSessionsWidget.h  mSessionsWidgetTableViewDelegate.h  mSettingsDialog.h  mTableColumnSelectWidget.cpp  mTableColumnSelectWidget.h  mTableRowSelectWidget.cpp  mTableRowSelectWidget.h  mTableView.h  mTableViewDelegate.h  (+23 more)
savegame/: POOP.txt  bad_exit_20220306-213041-lev0.txt  force_save_20230916-063923-lev1.txt  game_exit_20220306-211720-lev18.txt  game_exit_20220306-212506-lev18.txt  game_exit_20220313-081845-lev381.txt  game_exit_20220313-082037-lev381.txt  game_exit_20220313-083120-lev381.txt  game_exit_20220313-083149-lev381.txt  game_exit_20220313-083252-lev381.txt  game_exit_20220313-110307-lev381.txt  game_exit_20220313-113930-lev322.txt  game_exit_20220313-203918-lev322.txt  game_exit_20220314-061733-lev322.txt  game_exit_20220314-071418-lev322.txt  game_exit_20220613-061709-lev0.txt  game_exit_20220613-181106-lev16.txt  game_exit_20220613-192848-lev11.txt  game_exit_20220614-061219-lev10.txt  level_done_20220313-103213-lev381.txt  level_done_20220613-192842-lev10.txt  level_done_20220730-191112-lev12.txt  level_done_20220731-174411-lev12.txt  level_done_20220731-181219-lev12.txt  level_done_20220731-184012-lev17.txt  level_done_20220801-080148-lev20.txt  level_done_20220801-080834-lev40.txt  level_done_20220801-081503-lev40.txt  level_done_20220801-081808-lev40.txt  level_done_20220801-081923-lev40.txt  level_done_20220801-082116-lev40.txt  level_done_20220801-082227-lev40.txt  level_done_20220801-092325-lev41.txt  level_done_20220801-155145-lev35.txt  level_done_20220801-160723-lev35.txt  level_done_20220801-162304-lev36.txt  level_done_20220802-052115-lev35.txt  (+30 more)
sel/: flap1.sel  (+26 more)
(+858 files in other folders)
